# farsight-tcg

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fa9c0813cba_add_holdings_table_and_subscriber_.py  8d32ee993b5d_add_subscribers_table.py  a2f13ca2720a_phase_0_schema.py  c50ef7cb8e46_settings_multi_channel_prefs_and_mute_.py  cf8d678f8a2c_add_alert_rules_table.py  cfcfdb4756c8_timezone_aware_timestamps.py
backend/app/: config.py  main.py  pricing.py
backend/app/api/: alerts.py  dashboard.py  deps.py  pages.py  portfolio.py  schemas.py  settings.py  signup.py  tokens.py
backend/app/api/templates/: landing.html.j2  message.html.j2
backend/app/db/: models.py  session.py
backend/app/delivery/: __init__.py  alert_notify.py  base.py  discord_webhook.py  email_resend.py  sms_twilio.py  stub.py  transactional.py
backend/app/digest/: generator.py  personal.py  render_html.py  render_text.py  schemas.py
backend/app/digest/templates/: digest.html.j2
backend/app/jobs/: alerts.py  ingest.py  ingest_once.py  scheduler.py  send_digest.py
backend/app/sources/: base.py
backend/app/sources/news/: __init__.py  rss.py
backend/app/sources/price/: __init__.py  stub.py  tcgplayer.py
backend/app/sources/restock/: __init__.py  discord_channel.py  stub.py
backend/scripts/: check_alerts_once.py  generate_digest.py  print_today.py  send_digest_once.py
docs/: 01_PRODUCT_VISION.md  02_PRD.md  03_ROADMAP.md
frontend/: bun.lockb  package.json  (+1 more)
(+23 files in other folders)
