[project]
name = "farsight-backend"
version = "0.1.0"
description = "Farsight — Pokémon TCG Intelligence Feed backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "feedparser>=6.0",
    "jinja2>=3.1",
    "resend>=2.4",
    "twilio>=9.3",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
